# Software-Dev-Project

./: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
documentation/: architecture.md  changelog.md  specification_document.md  time_tracking.md
src/: main.py
src/game/: minesweeper.py
src/tests/: minesweeper_test.py
src/ui/: ui.py
tasks/: viikko1.md
tasks/week2/maksukortti/: pyproject.toml
tasks/week2/maksukortti/src/tests/: maksukortti_test.py
tasks/week2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
tasks/week3/: monopoli.md  sekvenssikaavio.md
