[project]
name = "software-dev-project"
version = "0.1.0"
description = ""
authors = [
    {name = "epicoderr",email = "nikolasrbinoski6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "invoke (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
